# Peitch

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  appveyor.yml
.circleci/: config.yml
.circlerci/: config.yml
.docs/cmd/: k8s.md
.github/: FUNDING.yml
.github/ForRepo/: ansi-test.ps1  icon.ansi
.github/workflows/: build-cross.yml  build-intellij-plugin.yml  build-vs-plugin.yml  build-vscode-plugin.yml  docker-publish.yml  git-sync.yml  pkg_managers.yml  publish-packages.yml  release-ide-plugins.yml  test-installers.yml
config/: clusters.yaml
intellij-peitch/: build.gradle.kts
intellij-peitch/src/main/java/com/example/peitch/: HelloAction.java
k8s/crd/: ph.io_phautorules.yaml  ph.io_phgitaudits.yaml  ph.io_phgitdisasterrecoveries.yaml  ph.io_phgitrbacpolicies.yaml  ph.io_phgitsyncjobs.yaml  ph.io_phpipelines.yaml  ph.io_phreleases.yaml
k8s/hpa/: runner-hpa.yaml
k8s/metrics/custom-metrics-adapter/: prometheus-adapter-config.yaml
k8s/operators/ph_operator/: Cargo.toml  Dockerfile  README.md
k8s/operators/ph_operator/src/: crds.rs  main.rs  metrics.rs
k8s/operators/ph_operator/src/controllers/: audit_controller.rs  autoheal_controller.rs  dr_controller.rs  gitsync_controller.rs  metrics_analyzer.rs  mod.rs  pipeline_controller.rs  preview_controller.rs  rbac_policy_controller.rs  release_controller.rs  utils.rs
k8s/operators/ph_operator/src/crds/: autoheal_rule.rs
k8s/runbooks/: runbooks-configmap.yaml
packaging/chocolatey/: ph.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/nsis/: ph.nsi
packaging/rpm/: ph.spec
packaging/snap/: snapcraft.yaml
runbooks/: auto-heal.sh
src/core/cli/: cli_parser.c  cli_parser.h
src/core/cli/commands/: health_handler.c  health_handler.h  kube_handler.c  kube_handler.h  local_handler.c  local_handler.h  policy_handler.c  policy_handler.h  preview_handler.c  preview_handler.h  runners_handler.c  runners_handler.h  secrets_handler.c  secrets_handler.h
src/core/config/: config_manager.c  config_manager.h
src/core/main/: main.c
src/core/phpkg/core/: detector.c  installer.c  resolver.c
src/core/scripting/node-h/: node_bridge.c  node_bridge.h  node_optimization.h
src/core/scripting/py-h/: python_bridge.c  python_bridge.h  python_optimization.h
src/core/tracing_layer/: Cargo.toml
src/core/tracing_layer/src/: lib.rs
src/core/tui/: peitch.ansi  tui.c  tui.h
src/core/ui/: tui.c
src/ipc/schemas/: rpc_data.proto
src/modules/audit_logger/: Cargo.toml
src/modules/audit_logger/src/: lib.rs
src/modules/autoheal_manager/: Cargo.toml
src/modules/autoheal_manager/src/: lib.rs
src/modules/ci_cd_manager/parser/: Cargo.toml
src/modules/cloud_ops/: Cargo.toml
src/modules/cloud_ops/src/: lib.rs
src/modules/cloud_ops/src/providers/: aws.rs  mod.rs
src/modules/docker_ops/: Cargo.toml
src/modules/docker_ops/src/: lib.rs
src/modules/domains/kubernetes/cli/: local_handler.c  registration.c  registration.h
src/modules/domains/kubernetes/k8s_health/: Cargo.toml
src/modules/domains/kubernetes/k8s_health/src/: health_logic.rs  lib.rs
src/modules/domains/kubernetes/k8s_info/: Cargo.toml
src/modules/domains/kubernetes/k8s_info/src/: lib.rs
src/modules/domains/kubernetes/k8s_local_dev/: Cargo.toml
src/modules/domains/kubernetes/k8s_local_dev/src/: cli.rs  main.rs  sync.rs
src/modules/domains/kubernetes/k8s_local_dev/src/provisioners/: k3s.rs  kind.rs  minikube.rs  mod.rs  profile_applier.rs
src/modules/domains/kubernetes/k8s_ops/: Cargo.toml
src/modules/domains/kubernetes/k8s_preview/: Cargo.toml
src/modules/domains/kubernetes/k8s_preview/src/: actions.rs  config.rs  crd.rs  kube_client.rs  lib.rs
src/modules/domains/kubernetes/k8s_sync_manager/: Cargo.toml
src/modules/domains/kubernetes/k8s_sync_manager/src/: apply.rs  diff.rs  lib.rs
src/modules/git_ops/: Cargo.toml
src/modules/git_sync/: Cargo.toml
src/modules/git_sync/src/: config.rs  drift.rs  error.rs  git_ops.rs  lib.rs  sync.rs
src/modules/issue_tracker/: Cargo.toml
src/modules/issue_tracker/src/: issue_service.rs  lib.rs
src/modules/multi_cluster_orchestrator/: Cargo.toml  build.rs
src/modules/multi_cluster_orchestrator/src/: cluster_manager.rs  dr_crd.rs  lib.rs  strategies.rs
src/modules/notification_manager/: Cargo.toml
src/modules/notification_manager/src/: lib.rs
src/modules/policy_engine/: Cargo.toml
src/modules/policy_engine/src/: gatekeeper.rs  lib.rs  preview_testing.rs
src/modules/rbac_manager/: Cargo.toml
src/modules/rbac_manager/src/: lib.rs
src/modules/release_orchestrator/: Cargo.toml
src/modules/release_orchestrator/src/: config.rs  crd.rs  lib.rs
src/modules/release_orchestrator/src/mesh/: argo.rs  istio.rs  linkerd.rs  mod.rs
src/modules/runner_manager/: Cargo.toml
src/modules/runner_manager/src/: config.rs  lib.rs
src/modules/secret_manager/: Cargo.toml
src/modules/secret_manager/src/: lib.rs  rotation_logic.rs
src/modules/secret_manager/src/providers/: mod.rs  vault.rs
src/modules/signature_verifier/: Cargo.toml
src/modules/signature_verifier/src/: lib.rs
src/modules/snapshot_manager/: Cargo.toml
src/modules/snapshot_manager/src/: lib.rs
src/modules/sync_engine/: Cargo.toml
src/modules/sync_engine/src/: sync.rs
src/phpkg/: .gitkeep  downloader.cpp  downloader.hpp  installer.c  phpkg.c
src/plugins/py-s/: advanced_workflow.py
templates/Extern-pkgs/aur/: PKGBUILD.template
templates/Extern-pkgs/homebrew/: ph.rb.template
templates/Extern-pkgs/vcpkg/: portfile.cmake.template  vcpkg.json.template
templates/For-Repo/: chocolateyinstall.ps1.template  ph.nuspec.template  ph.spec.template
templates/For-Repo/debian/: control.template
templates/For-Repo/nsis/: ph.nsi.template
templates/For-Repo/snap/: snapcraft.yaml.template
tests/: integration_test.sh  operator-deployment.yaml  operator-rbac.yaml
