[package]
name = "tracing_layer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
opentelemetry = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "opentelemetry"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
