[package]
name = "autoheal_manager"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique / phkaiser13"]
description = "A ph module for managing auto-heal rules."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
kube = { version = "1.1.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.25.0", features = ["v1_28"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
log = "0.4"
libc = "0.2"
