[package]
name = "notification_manager"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique / phkaiser13"]
description = "A ph module for handling outgoing notifications."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Internal dependency
issue_tracker = { path = "../issue_tracker" }
