[package]
name = "runner_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kube = { version = "1.1.0", features = ["derive"] }
k8s-openapi = { version = "0.25.0", features = ["v1_28"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
