[package]
name = "snapshot_manager"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique / phkaiser13"]
description = "A ph module for taking diagnostic snapshots."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
kube = { version = "1.1.0", features = ["runtime"] }
k8s-openapi = { version = "0.25.0", features = ["v1_28"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
opentelemetry = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
tracing = "0.1"
